--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "dotenv": "^16.3.1",
+    "mongoose": "^8.0.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
