--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "dotenv": "^16.3.1",
     "mongoose": "^8.0.0",
     "next": "14.0.1",
+    "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-button": "^0.7.2",
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
