--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
