--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "next": "14.0.1",
