--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "cookies-next": "^4.1.1",
     "dotenv": "^16.3.1",
     "firebase": "^10.9.0",
     "js-cookie": "^3.0.5",
