--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "cookies-next": "^4.1.1",
     "dotenv": "^16.3.1",
     "firebase": "^10.9.0",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.0.0",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
+    "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
     "react-google-button": "^0.7.2",
