--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-google-button": "^0.7.2",
     "react-icons": "^4.11.0",
+    "react-use": "^17.5.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   },
